--- a/roles/zammad/tasks/main.yml
+++ b/roles/zammad/tasks/main.yml
@@ -9,6 +9,7 @@
   ansible.builtin.import_tasks: "install.yml"
 
 - name: "Set up SSL/TLS"
+  when: zammad_ssl_enable
   ansible.builtin.import_tasks: "ssl.yml"
 
 - name: "Configure nginx"
