--- a/roles/zammad/defaults/main.yml
+++ b/roles/zammad/defaults/main.yml
@@ -9,6 +9,7 @@ zammad_release_channel: "stable"
 zammad_domain_name: "{{ ansible_fqdn }}"
 
 zammad_nginx_config_path: "/etc/nginx/sites-available/zammad.conf"
+zammad_ssl_enable: true
 zammad_ssl_cert_path: "/etc/ssl/certs/zammad_cert.pem"
 zammad_ssl_key_path: "/etc/ssl/private/zammad_key.pem"
 
